tests/ui/editions/edition-raw-pointer-method-2018.stderr
error[E0699]: cannot call a method on a raw pointer with an unknown pointee type
  --> $DIR/edition-raw-pointer-method-2018.rs:9:15
   |
LL |     let _ = y.is_null();
   |               ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0699`.
